[gd_scene load_steps=10 format=3 uid="uid://c12ufhc6674fu"]

[ext_resource type="Script" path="res://Characters/goat.gd" id="1_on57b"]
[ext_resource type="PackedScene" uid="uid://cgkmpjxtyv5yt" path="res://Characters/goat.glb" id="2_auan6"]
[ext_resource type="PackedScene" uid="uid://djh2yiv1yw4yv" path="res://Characters/map.glb" id="3_672gh"]
[ext_resource type="PackedScene" uid="uid://bj8f44agdkdp5" path="res://Models/arrow.tscn" id="3_yqmdg"]
[ext_resource type="Script" path="res://CameraController.gd" id="4_p326s"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jh84w"]
radius = 10.0

[sub_resource type="Animation" id="Animation_cqtuh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("goat:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.6, 0.6, 0.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("goat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vl3aq"]
resource_name = "breathe"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("goat:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.6, 0.6, 0.6), Vector3(0.549, 0.64, 0.6), Vector3(0.6, 0.6, 0.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("goat:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.2, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0n5pw"]
_data = {
"RESET": SubResource("Animation_cqtuh"),
"breathe": SubResource("Animation_vl3aq")
}

[node name="goat" type="Node3D"]
script = ExtResource("1_on57b")

[node name="goat" parent="." instance=ExtResource("2_auan6")]
transform = Transform3D(-2.62268e-08, 0, 0.6, 0, 0.6, 0, -0.6, 0, -2.62268e-08, 0, 0, 0)

[node name="map" parent="goat" instance=ExtResource("3_672gh")]
unique_name_in_owner = true
transform = Transform3D(-0.0589103, 0.0654734, -0.147394, -0.149605, 0.0155636, 0.0748161, 0.0428719, 0.145454, 0.0592126, -4.72982, 1.24947, -0.621525)

[node name="Arrow" parent="." instance=ExtResource("3_yqmdg")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 4.63786, 1.25867)

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_jh84w")

[node name="CameraController" type="RemoteTransform3D" parent="."]
transform = Transform3D(0.949425, 0.0436993, 0.310936, 0, 0.990268, -0.139173, -0.313992, 0.132134, 0.940184, 2.56859, -0.222061, 6.05336)
script = ExtResource("4_p326s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0n5pw")
}

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered" flags=18]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited" flags=18]
